Design create ad page.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -134,7 +134,7 @@ ul.nav-expand {
 }
 .image-preview {
   &.medium img {
-    max-height: 500px;
+    max-width: 236px;
   }
   &.small img {
     max-height: 200px;
