--- a/src/Adstacy/AppBundle/Resources/views/Wall/follow_button.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/follow_button.html.twig
@@ -3,5 +3,7 @@
   {% if user and wall.user != user %}
     {% if not user.hasFollowedWall(wall) %}
       <a href="{{ path('adstacy_app_wall_follow', {id: wall.id}) }}" class="btn btn-primary follow-wall">Follow</a>
+    {% else %}
+      <a href="{{ path('adstacy_app_wall_unfollow', {id: wall.id}) }}" class="btn btn-success unfollow-wall">UnFollow</a>
     {% endif %}
   {% endif %}
