change promote icon. fix login password type.

--- a/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
@@ -13,11 +13,11 @@
       {% if app.user %}
         {% if app.user.hasPromote(ad) %}
           <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary unpromote">
-            <span aria-hidden="true" class="icon-thumbs-down"> Unpromote
+            <span aria-hidden="true" class="icon-bullhorn"> Unpromote
           </a>
         {% else %}
           <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default promote">
-            <span aria-hidden="true" class="icon-thumbs-up"> Promote
+            <span aria-hidden="true" class="icon-bullhorn"> Promote
           </a>
         {% endif %}
       {% endif %}
