--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -29,7 +29,7 @@
         <input type="text" class="form-control input-lg" id="_username" name="_username" value="{{ last_username }}" required="required" placeholder="Username">
 
         <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
-        <input type="_password" class="form-control input-lg" id="_password" name="_password" required="required" placeholder="Password">
+        <input type="password" class="form-control input-lg" id="_password" name="_password" required="required" placeholder="Password">
 
         <div class="inline-block">
           <div class="span1of2">
