--- a/src/Adstacy/AppBundle/Resources/views/Wall/create.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/create.html.twig
@@ -1,10 +1,23 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block content %}
-  {{ form_start(form) }}
-    {{ form_errors(form) }}
-    {{ form_rest(form) }}
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyuser/less/settings.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
 
-    <input type="submit">
-  {{ form_end(form) }}
+{% block content %}
+  <div class="settings-container create-wall-container panel panel-default">
+    <section class="settings-section">
+      {{ form_start(form) }}
+        {{ form_errors(form) }}
+        {{ form_rest(form) }}
+
+        <input type="submit" class="btn btn-primary btn-block" value="Create Wall" />
+      {{ form_end(form) }}
+    </section>
+  </div>
 {% endblock %}
