Use different color for label on create add and wall page.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -79,6 +79,9 @@
 
 .create-ad-container {
   width: 860px;
+  label {
+    color: #555;
+  }
 
   .modal-body {
     > div {
@@ -89,6 +92,10 @@
 
 .create-wall-container {
   width: 400px;
+
+  label {
+    color: #555;
+  }
 
   form {
     > div {
