expand navbar category size. fix message masonry-container.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -132,50 +132,53 @@
           </div>
           <div id="navbar-expand-container" class="hide">
             <ul class="adstacy-container nav-expand">
-              <li><a href="#">#Komputer</a></li>
-              <li><a href="#">#Handphone</a></li>
-              <li><a href="#">#Kuliner</a></li>
-              <li><a href="#">#Pendidikan</a></li>
-              <li><a href="#">#TempatTinggal</a></li>
-              <li><a href="#">#Otomotif</a></li>
-              <li><a href="#">#RumahSakit</a></li>
-              <li><a href="#">#TempatWisata</a></li>
-              <li><a href="#">#Komputer</a></li>
-              <li><a href="#">#Handphone</a></li>
-              <li><a href="#">#Kuliner</a></li>
-              <li><a href="#">#Pendidikan</a></li>
-              <li><a href="#">#TempatTinggal</a></li>
-              <li><a href="#">#Otomotif</a></li>
-              <li><a href="#">#RumahSakit</a></li>
-              <li><a href="#">#TempatWisata</a></li>
-              <li><a href="#">#Komputer</a></li>
-              <li><a href="#">#Handphone</a></li>
-              <li><a href="#">#Kuliner</a></li>
-              <li><a href="#">#Pendidikan</a></li>
-              <li><a href="#">#TempatTinggal</a></li>
-              <li><a href="#">#Otomotif</a></li>
-              <li><a href="#">#RumahSakit</a></li>
-              <li><a href="#">#TempatWisata</a></li>
-              <li><a href="#">#Komputer</a></li>
-              <li><a href="#">#Handphone</a></li>
-              <li><a href="#">#Kuliner</a></li>
-              <li><a href="#">#Pendidikan</a></li>
-              <li><a href="#">#TempatTinggal</a></li>
-              <li><a href="#">#Otomotif</a></li>
-              <li><a href="#">#RumahSakit</a></li>
-              <li><a href="#">#TempatWisata</a></li>
+              <li><a href="#">Komputer</a></li>
+              <li><a href="#">Handphone</a></li>
+              <li><a href="#">Kuliner</a></li>
+              <li><a href="#">Pendidikan</a></li>
+              <li><a href="#">Tempat Tinggal</a></li>
+              <li><a href="#">Otomotif</a></li>
+              <li><a href="#">Rumah Sakit</a></li>
+              <li><a href="#">Tempat Wisata</a></li>
+              <li><a href="#">Komputer</a></li>
+              <li><a href="#">Handphone</a></li>
+              <li><a href="#">Kuliner</a></li>
+              <li><a href="#">Pendidikan</a></li>
+              <li><a href="#">Tempat Tinggal</a></li>
+              <li><a href="#">Otomotif</a></li>
+              <li><a href="#">Rumah Sakit</a></li>
+              <li><a href="#">Tempat Wisata</a></li>
+              <li><a href="#">Komputer</a></li>
+              <li><a href="#">Handphone</a></li>
+              <li><a href="#">Kuliner</a></li>
+              <li><a href="#">Pendidikan</a></li>
+              <li><a href="#">Tempat Tinggal</a></li>
+              <li><a href="#">Otomotif</a></li>
+              <li><a href="#">Rumah Sakit</a></li>
+              <li><a href="#">Tempat Wisata</a></li>
+              <li><a href="#">Komputer</a></li>
+              <li><a href="#">Handphone</a></li>
+              <li><a href="#">Kuliner</a></li>
+              <li><a href="#">Pendidikan</a></li>
+              <li><a href="#">Tempat Tinggal</a></li>
+              <li><a href="#">Otomotif</a></li>
+              <li><a href="#">Rumah Sakit</a></li>
+              <li><a href="#">Tempat Wisata</a></li>
             </ul>
           </div>
         </nav>
       </header>
       <div class="body clearfix">
-        <div class="adstacy-container">
-        {% for key, flashes in app.session.flashbag.all() %}
-          {% for flash in flashes %}
-            <div class="alert alert-{{ key }}">{{ flash }}</div>
-          {% endfor %}
-        {% endfor %}
-        </div>
+        {% set allFlashes = app.session.flashbag.all() %}
+        {% if allFlashes|length > 0 %}
+          <div class="adstacy-container">
+            {% for key, flashes in allFlashes %}
+              {% for flash in flashes %}
+                <div class="alert alert-{{ key }}">{{ flash }}</div>
+              {% endfor %}
+            {% endfor %}
+          </div>
+        {% endif %}
 
         {% block content %}{% endblock %}
       </div>
