make navbar category link block.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -13,7 +13,7 @@ body {
 .ad {
   width: 236px;
   margin: 14px 7px 0 7px;
-  background-color: white;
+  background-color: #fff;
   border: 1px solid @border-color;
 }
 
@@ -131,7 +131,12 @@ ul.nav-expand {
 #navbar-expand-container {
   padding: 10px 0;
   border-top: 1px solid @border-color;
+
+  a {
+    display: block;
+  }
 }
+
 .image-preview {
   &.medium img {
     max-width: 236px;
