Design show wall page.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -103,3 +103,51 @@
     }
   }
 }
+
+.show-wall-container {
+  padding: 10px 20px;
+
+  .pull-left {
+    width: 70%;
+  }
+
+  .pull-right {
+    width: 20%;  
+  }
+
+  .wall-name {
+    color: #555;
+    margin: 0 0 10px 0;
+  }
+
+  .ads-count, .followers-count {
+    color: #ccc;
+    float: right;
+    text-align: center;
+    width: 80px;
+
+    .label {
+      color: #999;
+      font-size: 14px;
+      margin: 0;
+      padding: 0;
+    }
+    .value {
+      color: #555;
+      font-size: 32px;
+      margin: 0;
+    }
+  }
+
+  .follow-wall {
+    margin-left: 20px;
+  }
+
+  .description {
+    color: #999;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0 0 10px 0;
+  }
+}
