--- a/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
@@ -4,13 +4,34 @@
 
 {% block meta_keywords %}{{ wall.tags | join(',') }}{% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyuser/less/settings.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
+
 {% block content %}
   {% set user = app.user %}
   <div class="masonry-container">
-    <h2>{{ wall.name }} ({{ wall.adsCount }} ads) (<span class="followers-count">{{ wall.followersCount }}</span> followers)
-      {% include 'AdstacyAppBundle:Wall:follow_button.html.twig' with {wall: wall} %}
-    </h2>
-    <h3>{{ parse_hashtag(wall.description) }}</h3>
+    <div class="show-wall-container adstacy-container panel panel-default clearfix">
+      <div class="pull-left">
+        <h2 class="wall-name">{{ wall.name }} {% include 'AdstacyAppBundle:Wall:follow_button.html.twig' with {wall: wall} %}</h2>
+        <h3 class="description">{{ parse_hashtag(wall.description) }}</h3>
+      </div>
+      <div class="pull-right">
+        <div class="followers-count">
+          <p class="label">Followers</p>
+          <p class="value">{{ wall.followersCount }}</p>
+        </div>
+        <div class="ads-count">
+          <p class="label">Ads</p>
+          <p class="value">{{ wall.adsCount }}</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="masonry">
   {% for ad in wall.ads %}
