Fix bug in follow/unfollow wall.

--- a/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
@@ -22,11 +22,11 @@
         <h3 class="description">{{ parse_hashtag(wall.description) }}</h3>
       </div>
       <div class="pull-right">
-        <div class="followers-count">
+        <div class="score-count">
           <p class="label">Followers</p>
-          <p class="value">{{ wall.followersCount }}</p>
+          <p class="value followers-count">{{ wall.followersCount }}</p>
         </div>
-        <div class="ads-count">
+        <div class="score-count">
           <p class="label">Ads</p>
           <p class="value">{{ wall.adsCount }}</p>
         </div>
