--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -120,7 +120,7 @@
     margin: 0 0 10px 0;
   }
 
-  .ads-count, .followers-count {
+  .score-count {
     color: #ccc;
     float: right;
     text-align: center;
