Change create ads to btn-primary.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -97,7 +97,7 @@
               <ul class="nav navbar-nav navbar-right">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                   <li>
-                    <button type="button" class="btn btn-default navbar-btn">
+                    <button type="button" class="btn btn-primary navbar-btn">
                       <span aria-hidden="true" class="icon-plus"></span> Create Ads
                     </button>
                   </li>
