--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -1,5 +1,10 @@
 body {
+  background-color: #e3e3e3;
   padding-top: 70px;
+}
+
+.navbar {
+  box-shadow: 0 1px 2px #999;
 }
 
 .masonry {
@@ -14,19 +19,38 @@ body {
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: #fff;
-  border: 1px solid @border-color;
+  border-radius: 5px 5px 0 0;
+  box-shadow: 0 0 1px #333;
+
+  .promote, .unpromote {
+    width: 86px;
+  }
+
+  .promotes-count-container {
+    width: 150px; 
+    border-top: 1px solid @border-color;
+  }
+
+  .inline-block a {
+    padding: 5px;
+  }
 }
 
 .pic {
   background-image: url('../img/diagonal-line.png');
+  border-radius: 5px 5px 0 0;
 
   img {
     background: url('../img/loading.gif') no-repeat center center;
+    border-radius: 5px 5px 0 0;
   }
 }
 
-.desc {
+.ad-desc {
   border-top: 1px solid @border-color;
+}
+
+.desc {
   padding: 7px 14px;
 }
 
