Fix follower/followings database structure.

--- a/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
@@ -2,6 +2,6 @@
 
 {% block show_content %}
   {% for following in followings %}
-    {{ user.username }}
+    {{ following.username }}
   {% endfor %}
 {% endblock %}
