Change ad design.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -26,9 +26,12 @@ body {
     width: 86px;
   }
 
-  .promotes-count-container {
-    width: 150px; 
-    border-top: 1px solid @border-color;
+  .box-medium {
+    width: 150px;
+  }
+  
+  .box-large {
+    width: 236px;
   }
 
   .inline-block a {
@@ -44,10 +47,6 @@ body {
     background: url('../img/loading.gif') no-repeat center center;
     border-radius: 5px 5px 0 0;
   }
-}
-
-.ad-desc {
-  border-top: 1px solid @border-color;
 }
 
 .desc {
@@ -168,4 +167,8 @@ ul.nav-expand {
   &.small img {
     max-height: 200px;
   }
+}
+
+.border-top {
+  border-top: 1px solid @border-color;
 }
