--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -245,7 +245,6 @@
           var $this = $(this);
           $.post(this.href, function(data) {
             var json = JSON.parse(data);
-            console.log(json);
             if (!json.error) {
               $this.parents().find('.followers-count').text(json.followers_count);
               if ($this.hasClass('follow-wall')) {
@@ -257,6 +256,26 @@
               }
               $this.toggleClass('follow-wall');
               $this.toggleClass('unfollow-wall');
+            }
+          });
+
+          return false;
+        });
+        $('a.follow-user, a.unfollow-user').click(function() {
+          var $this = $(this);
+          $.post(this.href, function(data) {
+            var json = JSON.parse(data);
+            if (!json.error) {
+              $this.parents().find('.user-followers-count').text(json.followers_count);
+              if ($this.hasClass('follow-user')) {
+                $this.attr('href', Routing.generate('adstacy_app_user_unfollow', {username: json.username}));
+                $this.text('Unfollow');
+              } else {
+                $this.attr('href', Routing.generate('adstacy_app_user_follow', {username: json.username}));
+                $this.text('Follow');
+              }
+              $this.toggleClass('follow-user');
+              $this.toggleClass('unfollow-user');
             }
           });
 
